# penpal

./: app.json  package-lock.json  package.json  pnpm-lock.yaml
apps/web/: .env.example  package.json  tailwind.config.js
apps/web/src/: app.d.ts  auth.d.ts  hooks.server.ts
apps/web/src/lib/components/: MainMenu.svelte
apps/web/src/lib/server/: getLetters.api.ts  letter.ts  user.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
apps/web/src/routes/letters/: +layout.server.ts  +page.server.ts  +page.svelte  +page.ts
apps/web/src/routes/letters/[letterId]/: +page.server.ts  +page.svelte
apps/web/src/routes/letters/new/: +page.server.ts  +page.svelte
apps/web/src/routes/login/: +page.svelte
apps/web/src/routes/me/: +page.server.ts  +page.svelte
apps/web/src/routes/register/: +page.svelte
server/: .gitignore  Cargo.toml  Dockerfile
server/migrations/: 20231013195633_initial.sql
server/src/: main.rs
server/src/dao/: letter.rs  mod.rs  sending_info.rs  user.rs
server/src/handlers/: letter.rs  mod.rs  sending_info.rs  user.rs
server/src/middleware/: authorize_current_user.rs  mod.rs
