[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "tls-rustls", "uuid", "chrono", "migrate"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = "0.7.2"
